force-app/main/default/objects/DemoObject__c/DemoObject__c.object-meta.xml
<CustomObject>
    <label>DemoObject</label>
    <nameField>
        <label>DemoObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DemoObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>