force-app/main/default/objects/DemoObject__c/fields/APP_Number__c.field-meta.xml
<CustomField>
    <fullName>APP_Number__c</fullName>
    <label>APP Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>