force-app/main/default/objects/DemoObject__c/fields/FCMA_MASTER__c.field-meta.xml
<CustomField>
    <fullName>FCMA_MASTER__c</fullName>
    <label>FCMA MASTER</label>
    <referenceTo>FCMA_MASTER__c</referenceTo>
    <relationshipLabel>DemoObjects</relationshipLabel>
    <relationshipName>DemoObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>