force-app/main/default/objects/DemoObject__c/fields/GE_test__c.field-meta.xml
<CustomField>
    <fullName>GE_test__c</fullName>
    <defaultValue>true</defaultValue>
    <label>GE test</label>
    <type>Checkbox</type>
</CustomField>