force-app/main/default/objects/DemoObject__c/fields/TYPE__c.field-meta.xml
<CustomField>
    <fullName>TYPE__c</fullName>
    <label>TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
                <isActive>false</isActive>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Client</fullName>
                <isActive>false</isActive>
                <label>Client</label>
            </value>
            <value>
                <fullName>customer</fullName>
                <isActive>false</isActive>
                <label>customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>