force-app/main/default/objects/DemoObject__c/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <description>test partner</description>
    <label>Partner</label>
</RecordType>